# approximate_boxes

./: CMakeLists.txt  LICENSE  README.md
example/: example.cpp  example_octree.cpp  example_simple.cpp
include/approximate_boxes/: approximate_boxes.h  build_polyhedron_from_bbox.h  hexahedron_mesh.h  utils.h
resources/: ellipsoid.msh  ellipsoid.off  ellipsoid_octree.msh  ellipsoid_simple.msh
src/: approximate_boxes.cpp  build_polyhedron_from_bbox.cpp  hexahedron_mesh.cpp
